fix js issue on mobile

--- a/anattafrontendkit/src/css/components/_headerNavigation.css
+++ b/anattafrontendkit/src/css/components/_headerNavigation.css
@@ -58,10 +58,10 @@
 	.c-headerNav__item{
 
 		@media (--tablet-small-max){
-			padding:17px 20px;
 			border-top:1px solid $border-color;
 			letter-spacing: 1px;
-    		word-spacing: -3px;		
+    		word-spacing: -3px;
+    		padding-bottom:20px;		
     	}
 
 		@media (--tablet-large){
@@ -143,8 +143,11 @@
 		}
 	}
 		.c-headerNav__link {
-			display: inline-block;
 			color: $color-brand-black;
+			display: block;	
+			@media (--tablet-small-max){
+				padding:17px 20px 0 20px;
+			}
 			@media (--tablet-large){
 				padding: 8px 16px;
 			}
@@ -177,6 +180,8 @@
 	display: none;
 	padding-top: 20px;
     padding-bottom: 9px;
+    padding-left: 20px;
+    padding-right: 20px;
 
 	@media (--tablet-large){
 		width: 188px;
@@ -196,7 +201,3 @@
 			margin-bottom: 0;
 		}
 	}
-
-#privy-container {
-	display:none !important;
-}
