--- a/anattafrontendkit/src/css/utilities/_common-utilities.css
+++ b/anattafrontendkit/src/css/utilities/_common-utilities.css
@@ -14,6 +14,10 @@
 	display: inline-block;
 }
 
+.u-block{
+	display: block;
+}
+
 .u-bold{
 	font-weight: 700;
 }
@@ -32,3 +36,4 @@
 .u-fontAzo {
 	font-family: azo-sans-web, sans-serif;
 }
+
